Cambios en la Vista Login

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebAppSalesManagement.Models.LoginViewModel
 @{
     ViewData["Title"] = "Iniciar Sesión";
-    Layout = "_LoginLayout";
+    Layout = "_Layout";
 }
 
 <div class="row justify-content-center">
