--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -21,16 +21,9 @@
                     </div>
 
                     <div class="form-group mb-3">
-                        <label asp-for="ContraseñaHash" class="control-label"></label>
-                        <input asp-for="ContraseñaHash" class="form-control" />
-                        <span asp-validation-for="ContraseñaHash" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <div class="form-check">
-                            <input asp-for="RememberMe" class="form-check-input" />
-                            <label asp-for="RememberMe" class="form-check-label"></label>
-                        </div>
+                        <label asp-for="Contraseña" class="control-label"></label>
+                        <input asp-for="Contraseña" class="form-control" />
+                        <span asp-validation-for="Contraseña" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
@@ -41,9 +34,3 @@
         </div>
     </div>
 </div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
